// 使用proto3语法
syntax = "proto3";

// 生成的go文件在哪个目录哪个包中， . 表示在当前目录生成，service 代表生成的go文件的包名是service
option go_package = ".;service";

// 定义服务，其中有个方法，接收客户端参数，返回服务端响应
service DuanTest {
  rpc DuanTest(DuanParams) returns (DuanResponse) {}
}

// 对应golang里面的结构体
// 这里面的 “赋值” 代表这个变量在这个 message 中的位置
message DuanParams {
  string name = 1;
  int64 age = 2;
  string address = 3;
}

message DuanResponse {
  string responseMsg = 1;
  int64 responseCode =2;
  DuanParams data = 3;
}
